* MediaHandler::getImageSize(), ::getMetadata() and ::isMetadataValid were
  deprecated and should no longer be overridden. Instead, subclasses should
  override getSizeAndMetadata().
* Deprecated File::getMetadata(). Instead use ::getMetadataArray(),
  ::getMetadataItem() and ::getMetadataItems().
* Message::title was deprecated, use Message::page instead.
* …

=== Other changes in 1.37 ===
* WatchlistManager::addWatch and WatchlistManager::addWatchIgnoringRights(),
  which replace User::addWatch(), now call the WatchArticle and
  WatchArticleComplete hooks.
* WatchlistManager::removeWatch and
  WatchlistManager::removeWatchIgnoringRights(), which replace
  User::removeWatch(), now call the UnwatchArticle and UnwatchArticleComplete
  hooks.
* The overridable postInitSetup() method was added to the
  AbstractAuthenticationProvider class. A provider can override postInitSetup()
  to do any custom post-initialization configuration.
* The overridable postInitSetup() method was added to the SessionProvider
  class. A provider can override postInitSetup() to do any custom
  post-initialization configuration.
* The protected getConfig() method was added to the SessionProvider class.
  Use SessionProvider::getConfig to get a config.
* The DBAccessBase class is deprecated. Classes that used to extend it
  should get a load balancer (factory) injected in the constructor instead.
* ActorNormalization::acquireActorId now requires IDatabase parameter.
  Not providing one emitted deprecation warnings since 1.36.
* Anti-lock constants ALF_PRELOAD_LINK, ALF_NO_BLOCK_LOCK, ALF_NO_LINK_LOCK
  and ALF_PRELOAD_EXISTENCE have been removed. They're unused since 1.25.
* …

== Compatibility ==

MediaWiki 1.37 requires PHP 7.3.19 or later and the following PHP extensions:

* ctype
* dom
* fileinfo
* iconv
* intl
* json
* mbstring
* xml

MySQL/MariaDB is the recommended DBMS. PostgreSQL or SQLite can also be used,
but support for them is somewhat less mature.

The supported versions are:
