@@ -214,17 +214,18 @@ abstract class BaseTemplate extends QuickTemplate {
 	}
 
 	/**
-	 * @deprecated since 1.35 use Skin::getAfterPortlet directly
+	 * @deprecated since 1.35 (emits deprecation warnings since 1.37), use Skin::getAfterPortlet directly
 	 * @param string $name
 	 */
 	protected function renderAfterPortlet( $name ) {
+		wfDeprecated( __METHOD__, '1.35' );
 		echo $this->getAfterPortlet( $name );
 	}
 
 	/**
 	 * Allows extensions to hook into known portlets and add stuff to them
 	 *
-	 * @deprecated since 1.35 use Skin::getAfterPortlet directly
+	 * @deprecated since 1.35 (emits deprecation warnings since 1.37), use Skin::getAfterPortlet directly
 	 *
 	 * @param string $name
 	 *
@@ -232,6 +233,7 @@ abstract class BaseTemplate extends QuickTemplate {
 	 * @since 1.29
 	 */
 	protected function getAfterPortlet( $name ) {
+		wfDeprecated( __METHOD__, '1.35' );
 		$html = '';
 		$content = '';
 		$this->getHookRunner()->onBaseTemplateAfterPortlet( $this, $name, $content );
